# moraine

./: .gitignore  AGENTS.md  Cargo.toml
.github/workflows/: ci.yml
crates/moraine-atom/: Cargo.toml
crates/moraine-atom/benches/: depstring.rs
crates/moraine-atom/src/: atom.rs  depspec.rs  error.rs  lib.rs  rewrite.rs
crates/moraine-atom/tests/: props.rs
crates/moraine-binpkg/: Cargo.toml
crates/moraine-binpkg/benches/: container.rs
crates/moraine-binpkg/src/: compress.rs  detect.rs  error.rs  fetch.rs  format.rs  gpkg.rs  greenfield.rs  index.rs  lib.rs  metadata.rs  moves.rs  resolution.rs  signature.rs  xpak.rs
crates/moraine-binpkg/tests/: corpus.rs  properties.rs  snapshots.rs
crates/moraine-binpkg/tests/snapshots/: snapshots__candidate_verdicts.snap  snapshots__packages_index.snap
crates/moraine-build/: Cargo.toml
crates/moraine-build/src/: bashlib.rs  depend.rs  elf.rs  env.rs  error.rs  fetch.rs  ipc.rs  isolation.rs  layout.rs  lib.rs  manifest.rs  metadata.rs  phase.rs  runner.rs  sandbox.rs  srcuri.rs  strip.rs
crates/moraine-build/src/bashlib/: isolated-functions.sh  phase-functions.sh  phase-helpers.sh
crates/moraine-build/tests/: bashlib_fixture.rs  end_to_end.rs  ipc_live.rs  ipc_store.rs  sandbox_confinement.rs
crates/moraine-cli/: Cargo.toml
crates/moraine-cli/src/: action.rs  args.rs  binhost.rs  config.rs  corpus.rs  diagnostics.rs  elog.rs  lib.rs  main.rs  news.rs  news_state.rs  plan.rs  regen.rs  render.rs  resolve_install.rs  run.rs  sets.rs  write.rs
crates/moraine-cli/tests/: binpkg_install_corpus.rs  corpus_pretend.rs  diagnostic_snapshot.rs  elog_news_strip_corpus.rs  merge_list_snapshot.rs  regen_e2e.rs  resolve_corpus.rs  smoke.rs
crates/moraine-cli/tests/snapshots/: diagnostic_snapshot__demo_error_renders_expected_report.snap  merge_list_snapshot__merge_list.snap  merge_list_snapshot__merge_list_verbose.snap  merge_list_snapshot__tree.snap
crates/moraine-common/: Cargo.toml
crates/moraine-common/benches/: hashing.rs
crates/moraine-common/src/: error.rs  fs.rs  glob.rs  hash.rs  id.rs  intern.rs  lib.rs
crates/moraine-common/tests/: interner_props.rs
crates/moraine-config/: Cargo.toml
crates/moraine-config/src/: error.rs  keywords.rs  lib.rs  license.rs  loader.rs  makeconf.rs  profile.rs  sets.rs  snapshot.rs  stacking.rs  use_resolution.rs  visibility.rs
crates/moraine-config/tests/: corpus.rs  profile_snapshot.rs  props.rs
crates/moraine-eapi/: Cargo.toml
crates/moraine-eapi/src/: lib.rs
crates/moraine-install/: Cargo.toml
crates/moraine-install/src/: apply.rs  commit.rs  config_update.rs  engine.rs  error.rs  global_update.rs  journal.rs  lib.rs  lock.rs  quickpkg.rs  realize.rs  remove.rs  step.rs  task.rs
crates/moraine-install/tests/: end_to_end.rs  global_update.rs  transaction.rs
crates/moraine-merge/: Cargo.toml
crates/moraine-merge/src/: collision.rs  contents.rs  engine.rs  error.rs  image.rs  install_mask.rs  lib.rs  merge.rs  plan.rs  preserve.rs  protect.rs  recovery.rs  state.rs  unmerge.rs
crates/moraine-merge/tests/: integration.rs
crates/moraine-repo/: Cargo.toml
crates/moraine-repo/benches/: store_query.rs
crates/moraine-repo/src/: discovery.rs  error.rs  flatlist.rs  import.rs  lib.rs  query.rs  store.rs  updates.rs
crates/moraine-repo/tests/: corpus.rs  incremental.rs  props.rs  query.rs
crates/moraine-resolve/: Cargo.toml
crates/moraine-resolve/benches/: resolve.rs
crates/moraine-resolve/src/: depnode.rs  encode.rs  error.rs  graph.rs  lib.rs  license.rs  normalize.rs  provider.rs  realsource.rs  required_use.rs  resolve.rs  serialize.rs  solution.rs  source.rs
crates/moraine-resolve/tests/: corpus.rs  fixture.rs  merge_order.rs  props.rs  resolve.rs  snapshots_test.rs
crates/moraine-resolve/tests/snapshots/: snapshots_test__required_use_explanation_snapshot.snap  snapshots_test__serialized_order_snapshot.snap
crates/moraine-solver/: Cargo.toml
crates/moraine-solver/benches/: solve.rs
crates/moraine-solver/src/: lib.rs  model.rs  provider.rs  range.rs  report.rs  solver.rs  term.rs
crates/moraine-solver/tests/: explanation.rs  range_props.rs  solve.rs
crates/moraine-solver/tests/snapshots/: explanation__unsatisfiable_explanation_snapshot.snap
crates/moraine-sync/: Cargo.toml
crates/moraine-sync/src/: backend.rs  command.rs  engine.rs  error.rs  extras.rs  lib.rs  manifest.rs  options.rs  outcome.rs  pool.rs  refresh.rs  revision.rs  tests.rs  timestamp.rs  verify.rs
crates/moraine-sync/src/backends/: git.rs  mod.rs  rsync.rs  webrsync.rs
crates/moraine-vdb/: Cargo.toml
crates/moraine-vdb/benches/: bulk_load.rs
crates/moraine-vdb/src/: codec.rs  contents.rs  error.rs  import.rs  journal.rs  lib.rs  query.rs  record.rs  soname.rs  store.rs  vardb.rs  wire.rs
crates/moraine-vdb/tests/: corpus.rs  import.rs  properties.rs  store.rs
crates/moraine-version/: Cargo.toml
crates/moraine-version/benches/: version.rs
crates/moraine-version/src/: lib.rs
crates/moraine-version/tests/: version_props.rs
docs/: corpus.md
