[package]
name = "moraine-binpkg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bzip2 = "0.6.1"
flate2 = "1.1.9"
moraine-atom = { version = "0.1.0", path = "../moraine-atom" }
moraine-common = { version = "0.1.0", path = "../moraine-common" }
moraine-eapi = { version = "0.1.0", path = "../moraine-eapi" }
moraine-repo = { version = "0.1.0", path = "../moraine-repo" }
moraine-vdb = { version = "0.1.0", path = "../moraine-vdb" }
moraine-version = { version = "0.1.0", path = "../moraine-version" }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
zstd = "0.13.3"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.2"
insta = "1.48.0"
proptest = "1.11.0"
tempfile = "3.27.0"

[[bench]]
name = "container"
harness = false
