[package]
name = "moraine-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake2 = "0.10.6"
blake3 = "1.8.5"
digest = "0.10"
md-5 = "0.10"
memmap2 = "0.9.11"
sha2 = "0.10"
tempfile = "3.27.0"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "hashing"
harness = false
