[package]
name = "moraine-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
moraine-atom = { version = "0.1.0", path = "../moraine-atom" }
moraine-common = { version = "0.1.0", path = "../moraine-common" }
moraine-eapi = { version = "0.1.0", path = "../moraine-eapi" }
moraine-version = { version = "0.1.0", path = "../moraine-version" }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
insta = "1.48.0"
proptest = "1.11.0"
tempfile = "3.27.0"
