[package]
name = "moraine-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
moraine-binpkg = { version = "0.1.0", path = "../moraine-binpkg" }
moraine-build = { version = "0.1.0", path = "../moraine-build" }
moraine-common = { version = "0.1.0", path = "../moraine-common" }
moraine-config = { version = "0.1.0", path = "../moraine-config" }
moraine-merge = { version = "0.1.0", path = "../moraine-merge" }
moraine-resolve = { version = "0.1.0", path = "../moraine-resolve" }
moraine-sync = { version = "0.1.0", path = "../moraine-sync" }
moraine-vdb = { version = "0.1.0", path = "../moraine-vdb" }
moraine-version = { version = "0.1.0", path = "../moraine-version" }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.46"
thiserror = "2.0.18"
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
