[package]
name = "moraine-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
moraine-common = { version = "0.1.0", path = "../moraine-common" }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.2"
insta = "1.48.0"
proptest = "1.11.0"

[[bench]]
name = "solve"
harness = false
