[package]
name = "moraine-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
moraine-common = { version = "0.1.0", path = "../moraine-common" }
moraine-config = { version = "0.1.0", path = "../moraine-config" }
moraine-repo = { version = "0.1.0", path = "../moraine-repo" }
shlex = "2.0.1"
thiserror = "2.0.18"
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
insta = "1.48.0"
proptest = "1.11.0"
tempfile = "3.27.0"
