[package]
name = "moraine-vdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bzip2 = "0.6.1"
moraine-atom = { version = "0.1.0", path = "../moraine-atom" }
moraine-common = { version = "0.1.0", path = "../moraine-common" }
moraine-config = { version = "0.1.0", path = "../moraine-config" }
moraine-eapi = { version = "0.1.0", path = "../moraine-eapi" }
moraine-version = { version = "0.1.0", path = "../moraine-version" }
rayon = "1.12.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.2"
insta = "1.48.0"
proptest = "1.11.0"
tempfile = "3.27.0"

[[bench]]
name = "bulk_load"
harness = false
